# lec1

./: CMakeLists.txt  Makefile
src/: AreaCalculator.cpp  AreaCalculator.h  main.cpp
